[gd_scene load_steps=12 format=3 uid="uid://f7m0p5xdy0wb"]

[ext_resource type="Script" uid="uid://d0p4lip8fx5pe" path="res://scripts/water_reclaimer.gd" id="1_qj4il"]
[ext_resource type="PackedScene" uid="uid://xl7hoyu6js47" path="res://scenes/jugFiller.tscn" id="2_tmb4y"]
[ext_resource type="Texture2D" uid="uid://chtdaquk74bsq" path="res://assets/shelf.png" id="3_l503n"]
[ext_resource type="Texture2D" uid="uid://c766gyyxf6bw1" path="res://assets/Water Filter.png" id="4_xigmd"]
[ext_resource type="Script" uid="uid://1axpesiatuwx" path="res://scenes/waterFilter.gd" id="4_y1ael"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q457c"]
radius = 278.25888

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmb4y"]
size = Vector2(10, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rt82"]
size = Vector2(53, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y1ael"]
height = 52.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1ael"]
size = Vector2(104, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftds1"]
size = Vector2(78, 20)

[node name="Water Reclaimer" type="ColorRect"]
offset_left = 547.651
offset_top = -1005.37
offset_right = 866.651
offset_bottom = -736.0
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)
script = ExtResource("1_qj4il")

[node name="ProgressBar" type="HSlider" parent="."]
layout_mode = 0
offset_left = 40.268497
offset_top = 138.25513
offset_right = 280.537
offset_bottom = 175.83905
max_value = 2.0
step = 0.02
value = 1.0
ticks_position = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 318.12085
offset_bottom = 67.1142
theme_override_font_sizes/normal_font_size = 33
text = "WATER RECLAIMER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 21.349018
offset_top = 201.05455
offset_right = 132.75845
offset_bottom = 237.29625
text = "OVERRIDE"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 108.72485
offset_top = 102.01349
offset_right = 191.94635
offset_bottom = 138.25513
mouse_filter = 2
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
mouse_filter = 2
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 102.0
offset_right = 284.2215
offset_bottom = 138.24164
mouse_filter = 2
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect3"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
mouse_filter = 2
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 100.2215
offset_bottom = 138.24164
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect4"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
mouse_filter = 2
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 109.349
offset_top = 79.0
offset_right = 192.349
offset_bottom = 119.0
mouse_filter = 2
text = "WATER"
horizontal_alignment = 1

[node name="Output" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 18.348999
offset_top = 79.0
offset_right = 100.349
offset_bottom = 119.0
mouse_filter = 2
text = "OUTPUT"
horizontal_alignment = 1

[node name="Efficiency" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 191.349
offset_top = 79.0
offset_right = 295.0
offset_bottom = 119.0
mouse_filter = 2
text = "EFFICIENCY"
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 154.23492
offset_top = 198.36998
offset_right = 194.23492
offset_bottom = 238.36998
mouse_filter = 2
color = Color(0.29586652, 0.2958665, 0.2958665, 1)

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 40.268497
offset_top = 157.04707
offset_right = 80.26849
offset_bottom = 197.04707
mouse_filter = 2
text = "0"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 265.77188
offset_top = 162.4162
offset_right = 305.77188
offset_bottom = 202.4162
mouse_filter = 2
text = "2"

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(155, 175)
shape = SubResource("CircleShape2D_q457c")

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(158.349, 134.37)

[node name="ColorRect5" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="JugFiller" parent="." instance=ExtResource("2_tmb4y")]
layout_mode = 0
offset_left = 381.349
offset_top = 97.369995
offset_right = 432.349
offset_bottom = 311.37
mouse_filter = 2

[node name="Control" type="Control" parent="."]
z_index = 1
clip_contents = true
anchors_preset = 0
offset_left = 227.349
offset_top = 191.37
offset_right = 304.349
offset_bottom = 246.37
mouse_filter = 2

[node name="ColorRect" type="Sprite2D" parent="Control"]
position = Vector2(26, 0)
texture = ExtResource("3_l503n")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect"]
offset_left = -30.0
offset_right = 47.0
offset_bottom = 55.0
mouse_filter = 2
text = "FILTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Handle" type="Area2D" parent="Control/ColorRect"]
z_index = 100
position = Vector2(-27, 2)
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/ColorRect/Handle"]
position = Vector2(77, 27.5)
shape = SubResource("RectangleShape2D_tmb4y")

[node name="Backdrop" type="ColorRect" parent="Control"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.06879827, 0.06879828, 0.06879828, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_left = -4.0
offset_top = 26.0
offset_right = 79.0
offset_bottom = 36.0
mouse_filter = 2
color = Color(0.35663593, 0.18782693, 0.06474287, 1)

[node name="ColorRect3" type="ColorRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 64.0
offset_bottom = 48.0
mouse_filter = 2
color = Color(0.26293266, 0.26293242, 0.26293242, 1)

[node name="ColorRect" type="ColorRect" parent="Control/ColorRect3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 49.0
offset_bottom = 33.0
mouse_filter = 2
color = Color(0.11119685, 0.11119684, 0.11119684, 1)

[node name="ColorRect4" type="ColorRect" parent="Control/ColorRect3/ColorRect"]
layout_mode = 0
offset_top = 11.0
offset_right = 3.0
offset_bottom = 21.0
mouse_filter = 2
color = Color(0.35663593, 0.18782693, 0.06474287, 1)

[node name="ColorRect5" type="ColorRect" parent="Control/ColorRect3/ColorRect"]
layout_mode = 0
offset_left = 44.0
offset_top = 11.0
offset_right = 47.0
offset_bottom = 21.0
mouse_filter = 2
color = Color(0.35663593, 0.18782693, 0.06474287, 1)

[node name="Filter" type="RigidBody2D" parent="Control/ColorRect3/ColorRect"]
position = Vector2(23, 11)
scale = Vector2(0.75, 0.75)
collision_layer = 512
collision_mask = 256
freeze = true
script = ExtResource("4_y1ael")

[node name="Jug2" type="Sprite2D" parent="Control/ColorRect3/ColorRect/Filter"]
scale = Vector2(0.1512, 0.1512)
texture = ExtResource("4_xigmd")
offset = Vector2(8.333335, 43.792156)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Control/ColorRect3/ColorRect/Filter"]
scale = Vector2(1.26, 1.26)
polygon = PackedVector2Array(19.047619, 8.730158, -16.666666, 8.730158, -17.460316, 3.174603, -16.666666, 0, 18.253967, 0, 19.841269, 3.9682536)

[node name="Filter" type="Area2D" parent="Control/ColorRect3/ColorRect/Filter"]
collision_layer = 2052
collision_mask = 0

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Control/ColorRect3/ColorRect/Filter/Filter"]
scale = Vector2(1.26, 1.26)
polygon = PackedVector2Array(19.047619, 8.730158, -16.666666, 8.730158, -17.460316, 3.174603, -16.666666, 0, 18.253967, 0, 19.841269, 3.9682536)
disabled = true

[node name="Control" type="Control" parent="Control/ColorRect3"]
clip_contents = true
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 50.0
offset_bottom = 34.0
mouse_filter = 2

[node name="Door" type="ColorRect" parent="Control/ColorRect3/Control"]
layout_mode = 0
offset_right = 49.0
offset_bottom = 33.0
mouse_filter = 2
color = Color(0.39308554, 0.3930855, 0.39308548, 1)

[node name="Area2D" type="Area2D" parent="Control/ColorRect3/Control/Door"]
z_index = 10
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/ColorRect3/Control/Door/Area2D"]
position = Vector2(24.5, 0.5)
shape = SubResource("RectangleShape2D_1rt82")

[node name="Area2D" type="Area2D" parent="Control/ColorRect3"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/ColorRect3/Area2D"]
position = Vector2(25, 18)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_y1ael")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(265.349, 219.87)
shape = SubResource("RectangleShape2D_y1ael")

[node name="ExtraZoomPoint" type="Node2D" parent="."]
position = Vector2(264.349, 216.37)

[node name="MouseCover" type="ColorRect" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 221.349
offset_top = 186.37
offset_right = 313.349
offset_bottom = 254.37
color = Color(0, 0, 0, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(265.349, 255.37)
shape = SubResource("RectangleShape2D_ftds1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(265.349, 181.37)
shape = SubResource("RectangleShape2D_ftds1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(314.349, 221.37)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_ftds1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(217.349, 221.37)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_ftds1")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Control/ColorRect/Handle" to="." method="_on_handle_mouse_entered"]
[connection signal="mouse_exited" from="Control/ColorRect/Handle" to="." method="_on_handle_mouse_exited"]
[connection signal="mouse_entered" from="Control/ColorRect3/Control/Door/Area2D" to="." method="_filter_door_entered"]
[connection signal="mouse_exited" from="Control/ColorRect3/Control/Door/Area2D" to="." method="_filter_door_exited"]
[connection signal="area_entered" from="Control/ColorRect3/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_filter_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_filter_mouse_exited"]
